<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Trabajo de fin de grado: "Definición e implementación de herramienta para la navegación de peatones en entornos urbanos para el sistema operativo móvil Android"
  ~ Creado por: Cristian Do Carmo Rodríguez
  ~ Tutora: Lucía Díaz Vilariño
  ~ Cotutor: Jesús Balado Frías
  ~ Copyright (c) 2024. Todos los derechos reservados.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context=".ui.actividades.visualizacion.ActividadMapa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contenedor_opciones"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/seleccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="32dp"
                    android:checkedButton="@id/opcion_1">

                    <RadioButton
                        android:id="@+id/opcion_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/opcion_1" />

                    <RadioButton
                        android:id="@+id/opcion_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/opcion_2" />

                    <RadioButton
                        android:id="@+id/opcion_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/opcion_3" />

                    <RadioButton
                        android:id="@+id/opcion_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/opcion_4" />

                    <RadioButton
                        android:id="@+id/opcion_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opcion_5" />

                </RadioGroup>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contenedor_opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/actividad_margen_lateral"
        android:layout_marginEnd="@dimen/actividad_margen_lateral"
        android:layout_marginBottom="@dimen/actividad_margen_inferior"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/importacion_mapas_ejemplo_titulo"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/importacion_mapas_ejemplo_descripcion"
            android:textSize="@dimen/p" />


        <Button
            android:id="@+id/boton_importar"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/importar"
            app:icon="@drawable/ic_next"
            app:iconGravity="end" />

    </LinearLayout>

</RelativeLayout>