<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Trabajo de fin de grado: "Definición e implementación de herramienta para la navegación de peatones en entornos urbanos para el sistema operativo móvil Android"
  ~ Creado por: Cristian Do Carmo Rodríguez
  ~ Tutora: Lucía Díaz Vilariño
  ~ Cotutor: Jesús Balado Frías
  ~ Copyright (c) 2024. Todos los derechos reservados.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn = "true"
    tools:context=".ui.actividades.visualizacion.ActividadMapa">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/barra_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/borrar_area_titulo"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/borrar_area_guia"
                android:textSize="@dimen/p" />

            <Button
                android:id="@+id/boton_borrar_area"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/borrar_area_boton"
                app:icon="@drawable/ic_borrar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/barra_top"
            android:orientation="vertical">

            <es.uvigo.eei.tfg.ccarmo.ui.views.mapa.MapaView
                android:id="@+id/vista_mapa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_procesando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurfaceContainer"
        android:visibility="gone">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>